Fix y overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,7 +21,7 @@ html, body {
 
 #landing
 {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-image: url("../img/landing.jpg");
 	background-size: cover;
